# university-projects

./: .gitignore  README.md
cmpe150/: README.md
cmpe150/project1/: MEC2013400105.java
cmpe150/project2/: MEC2013400105.java
cmpe160/: README.md
cmpe230/: README.md
cmpe240/: README.md
cmpe240/exp1/: ckt.circ  (+3 more)
cmpe250/: README.md
cmpe250/project1/: .gitignore  BigInteger.cpp  BigInteger.h  CMakeLists.txt  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  main.cpp
cmpe250/project1/testcases/: my_res_mult3.txt  res_mult10.txt  res_mult11.txt  res_mult2.txt  res_mult4.txt  res_mult5.txt  res_mult6.txt  res_mult7.txt  res_mult8.txt  res_mult9.txt  res_sum10.txt  res_sum11.txt  res_sum2.txt  res_sum3.txt  res_sum4.txt  res_sum5.txt  res_sum6.txt  res_sum7.txt  res_sum8.txt  res_sum9.txt  test_mult0.txt  test_mult1.txt  test_mult10.txt  test_mult11.txt  test_mult2.txt  test_mult3.txt  test_mult4.txt  test_mult5.txt  test_mult6.txt  test_mult7.txt  test_mult8.txt  test_mult9.txt  test_sum0.txt  test_sum1.txt  test_sum10.txt  test_sum11.txt  test_sum2.txt  test_sum3.txt  test_sum4.txt  test_sum5.txt  (+4 more)
cmpe260/: README.md
cmpe300/: README.md  main.cpp  speech_tokenized.txt
cmpe321/: README.md
cmpe322/: README.md
cmpe362/: README.md
cmpe436/: README.md
cmpe487/: README.md
cmpe493/: README.md
cmpe49f/: README.md  config.py  graph.py  utils.py
ie306/: IE306_Group24.ipynb  README.md
ie310/: README.md  capacities.txt  distances.txt  estimates.txt  quiz4-1.gms  quiz4-1.txt  quiz4-2.gms  quiz4-2.txt  quiz4-31.gms  quiz4-31.txt  quiz4-32.gms  quiz4-32.txt
(+531 files in other folders)
